--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -10,6 +10,10 @@
   </tr>
 </table>
 
+<% if current_user != user %>
+  <%= link_to 'chatを始める', chat_path(user.id)%>
+<% end %>
+
 <div class='row'>
   <%= link_to '',edit_user_path(user),class: "btn btn-outline-secondary btn-block fas fa-user-cog edit_user_#{user.id}" %>
 </div>
